--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>THE SYSTEM</h1>
+        <h1>THE <span class="stripe">SYSTEM</span></h1>
         <nav>
             <ul class="nav-list">
                 <li><a href="#">Planets</a></li>
