--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
     </section>
     <!-- Planets Section -->
-    <section id="planets-section" role="region" aria-label="Meet the Locals">
+    <section id="planets-section"aria-label="Meet the Locals">
         <div id="meet-locals">
-            <h3>Meet the Locals</h3>
+            <h3 role="heading">Meet the Locals</h3>
         </div>
         <!-- Container for Planet Cards -->
         <div id="planets-container">
